# bridgeline

./: CMakeLists.txt  compile_flags.txt  readme.md
source/TContent/: Color.h  Size.h  Style.h
source/bridgeline/: color.cpp  color.h  parser.cpp  parser.h  size.cpp  size.h  style.cpp  style.h
source/cli/: _Color.cpp  _Size.cpp  _Style.cpp
test/: ansi.cpp  main.cpp  parser.cpp
